--- a/src/lib/common/Makefile.am
+++ b/src/lib/common/Makefile.am
@@ -24,7 +24,7 @@ install-data-hook:
 	test -d ${DESTDIR}${sysconfdir} || \
 		${INSTALL} -d ${DESTDIR}${sysconfdir}
 	test -f ${DESTDIR}${sysconfdir}/softhsm2.conf || \
-		${INSTALL_DATA} ${top_builddir}/softhsm2.conf ${DESTDIR}${sysconfdir}
-	${INSTALL_DATA} ${top_builddir}/softhsm2.conf ${DESTDIR}${sysconfdir}/softhsm2.conf.sample
+		${INSTALL_DATA} ${top_builddir}/src/lib/common/softhsm2.conf ${DESTDIR}${sysconfdir}
+	${INSTALL_DATA} ${top_builddir}/src/lib/common/softhsm2.conf ${DESTDIR}${sysconfdir}/softhsm2.conf.sample
 	test -d ${DESTDIR}${softhsmtokendir} || \
 		${INSTALL} -d -m 700 ${DESTDIR}${softhsmtokendir}
