--- a/src/lib/handle_mgr/test/Makefile.am
+++ b/src/lib/handle_mgr/test/Makefile.am
@@ -1,4 +1,4 @@
-# $Id$
+# $Id: $
 
 MAINTAINERCLEANFILES = 		$(srcdir)/Makefile.in
 
@@ -9,18 +9,20 @@ AM_CPPFLAGS = 			-I$(srcdir)/.. \
 				-I$(srcdir)/../../crypto \
 				-I$(srcdir)/../../object_store \
 				-I$(srcdir)/../../session_mgr \
+				-I$(srcdir)/../../slot_mgr \
 				-I$(srcdir)/../../data_mgr \
 				`cppunit-config --cflags`
 
-check_PROGRAMS =		slotmgrtest
+check_PROGRAMS =		handlemgrtest
 
-slotmgrtest_SOURCES =		slotmgrtest.cpp \
-				SlotManagerTests.cpp
+handlemgrtest_SOURCES =		handlemgrtest.cpp \
+				HandleManagerTests.cpp
 
-slotmgrtest_LDADD =		../../libsofthsm_convarch.la 
+handlemgrtest_LDADD =		../../libsofthsm_convarch.la 
 
-slotmgrtest_LDFLAGS = 		-no-install `cppunit-config --libs` -pthread
+handlemgrtest_LDFLAGS = 	-no-install `cppunit-config --libs`
 
-TESTS = 			slotmgrtest
+TESTS = 			handlemgrtest
 
 EXTRA_DIST =			$(srcdir)/*.h
+
