cppunit-config put a library path before ours so wrong lib got picked, enforcer that we use our paths.

--- a/src/lib/crypto/test/Makefile.am
+++ b/src/lib/crypto/test/Makefile.am
@@ -28,7 +28,7 @@ cryptotest_SOURCES =		cryptotest.cpp \
 
 cryptotest_LDADD =		../../libsofthsm_convarch.la
 
-cryptotest_LDFLAGS = 		-no-install `cppunit-config --libs`
+cryptotest_LDFLAGS = 		@CRYPTO_LIBS@ -no-install `cppunit-config --libs`
 
 TESTS = 			cryptotest
 
