--- a/src/lib/crypto/test/Makefile.am
+++ b/src/lib/crypto/test/Makefile.am
@@ -19,6 +19,7 @@ cryptotest_SOURCES =		cryptotest.cpp \
 				DESTests.cpp \
 				DSATests.cpp \
 				HashTests.cpp \
+				MacTests.cpp \
 				RNGTests.cpp \
 				RSATests.cpp \
 				chisq.c \
