--- a/src/lib/crypto/test/Makefile.am
+++ b/src/lib/crypto/test/Makefile.am
@@ -18,6 +18,7 @@ cryptotest_SOURCES =		cryptotest.cpp \
 				AESTests.cpp \
 				DESTests.cpp \
 				DSATests.cpp \
+				ECDSATests.cpp \
 				HashTests.cpp \
 				RNGTests.cpp \
 				RSATests.cpp \
