--- a/src/lib/crypto/test/Makefile.am
+++ b/src/lib/crypto/test/Makefile.am
@@ -17,6 +17,7 @@ check_PROGRAMS =		cryptotest
 cryptotest_SOURCES =		cryptotest.cpp \
 				AESTests.cpp \
 				DESTests.cpp \
+				DHTests.cpp \
 				DSATests.cpp \
 				HashTests.cpp \
 				MacTests.cpp \
