add ECDH partial support

--- a/src/lib/crypto/Makefile.am
+++ b/src/lib/crypto/Makefile.am
@@ -46,6 +46,7 @@ libsofthsm_crypto_la_SOURCES +=	OSSLAES.cpp \
 				OSSLDSAKeyPair.cpp \
 				OSSLDSAPrivateKey.cpp \
 				OSSLDSAPublicKey.cpp \
+				OSSLECDH.cpp \
 				OSSLECDSA.cpp \
 				OSSLECKeyPair.cpp \
 				OSSLECPrivateKey.cpp \
@@ -81,6 +82,10 @@ libsofthsm_crypto_la_SOURCES +=	BotanAES.cpp \
 				BotanDSAKeyPair.cpp \
 				BotanDSAPrivateKey.cpp \
 				BotanDSAPublicKey.cpp \
+				BotanECDH.cpp \
+				BotanECDHKeyPair.cpp \
+				BotanECDHPrivateKey.cpp \
+				BotanECDHPublicKey.cpp \
 				BotanECDSA.cpp \
 				BotanECDSAKeyPair.cpp \
 				BotanECDSAPrivateKey.cpp \
