add GOST support

--- a/src/lib/crypto/test/Makefile.am
+++ b/src/lib/crypto/test/Makefile.am
@@ -21,6 +21,7 @@ cryptotest_SOURCES =		cryptotest.cpp \
 				DSATests.cpp \
 				ECDHTests.cpp \
 				ECDSATests.cpp \
+				GOSTTests.cpp \
 				HashTests.cpp \
 				MacTests.cpp \
 				RNGTests.cpp \
