--- a/win32+botan/convarch/convarch.vcxproj.filters
+++ b/win32+botan/convarch/convarch.vcxproj.filters
@@ -80,9 +80,6 @@
     <ClInclude Include="..\..\src\lib\common\HandleFactory.h">
       <Filter>Common Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\lib\common\IPCSignal.h">
-      <Filter>Common Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\lib\common\log.h">
       <Filter>Common Header Files</Filter>
     </ClInclude>
@@ -90,9 +87,6 @@
       <Filter>Common Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\lib\common\osmutex.h">
-      <Filter>Common Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\lib\common\Semaphore.h">
       <Filter>Common Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\lib\common\Serialisable.h">
@@ -213,6 +207,9 @@
       <Filter>Object Store Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\lib\object_store\FindOperation.h">
+      <Filter>Object Store Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\lib\object_store\Generation.h">
       <Filter>Object Store Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\lib\object_store\ObjectFile.h">
@@ -391,9 +388,6 @@
     <ClCompile Include="..\..\src\lib\common\fatal.cpp">
       <Filter>Common Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\lib\common\IPCSignal.cpp">
-      <Filter>Common Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\lib\common\log.cpp">
       <Filter>Common Source Files</Filter>
     </ClCompile>
@@ -401,9 +395,6 @@
       <Filter>Common Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\lib\common\osmutex.cpp">
-      <Filter>Common Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\lib\common\Semaphore.cpp">
       <Filter>Common Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\lib\common\SimpleConfigLoader.cpp">
@@ -503,6 +494,9 @@
       <Filter>Object Store Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\lib\object_store\FindOperation.cpp">
+      <Filter>Object Store Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\lib\object_store\Generation.cpp">
       <Filter>Object Store Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\lib\object_store\ObjectFile.cpp">
