Insert ObjectStoreToken base class that will allow the for storage backend to be switched out for another implementation.

--- a/src/lib/object_store/Makefile.am
+++ b/src/lib/object_store/Makefile.am
@@ -17,7 +17,8 @@ libsofthsm_objectstore_la_SOURCES =	ObjectStore.cpp \
 					ObjectFile.cpp \
 					SessionObject.cpp \
 					SessionObjectStore.cpp \
-					FindOperation.cpp
+					FindOperation.cpp \
+					ObjectStoreToken.cpp
 
 SUBDIRS = 				test
 
