Make database storage backend optional via configure.

--- a/configure.ac
+++ b/configure.ac
@@ -81,12 +81,36 @@ AC_ARG_WITH(migrate,
 AC_MSG_CHECKING(if building with softhsm-migrate)
 if test "x${build_migrate}" = "xyes"; then
 	AC_MSG_RESULT(yes)
-	ACX_SQLITE3
 	ACX_YIELD
 else
 	AC_MSG_RESULT(no)
 fi
 AM_CONDITIONAL([BUILD_MIGRATE], [test "x${build_migrate}" = "xyes"])
+
+# If the user wants to have the database storage backend
+AC_ARG_WITH([objectstore-backend-db],
+	AC_HELP_STRING([--with-objectstore-backend-db],
+		[Build with object store backend database (SQLite3).]
+	),
+	[build_objectstore_backend_db="${withval}"],
+	[build_objectstore_backend_db="no"]
+)
+AC_MSG_CHECKING(if building database object store backend)
+if test "x${build_objectstore_backend_db}" = "xyes"; then
+	AC_MSG_RESULT(yes)
+else
+	AC_MSG_RESULT(no)
+fi
+AM_CONDITIONAL([BUILD_OBJECTSTORE_BACKEND_DB], [test "x${build_objectstore_backend_db}" = "xyes"])
+
+# Require SQLite3 if either building --with-migrate or --with-objectstore-backend-db
+AC_MSG_CHECKING(if SQLite3 required)
+if test "x${build_migrate}" = "xyes" -o "x${build_objectstore_backend_db}" = "xyes"; then
+	AC_MSG_RESULT(yes)
+	ACX_SQLITE3
+else
+	AC_MSG_RESULT(no)
+fi
 
 # Set full directory paths
 full_sysconfdir=`eval eval eval eval eval echo "${sysconfdir}" | sed "s#NONE#${prefix}#" | sed "s#NONE#${ac_default_prefix}#"`
