--- a/src/lib/object_store/test/Makefile.am
+++ b/src/lib/object_store/test/Makefile.am
@@ -24,7 +24,8 @@ objstoretest_SOURCES =		objstoretest.cpp \
 
 if BUILD_OBJECTSTORE_BACKEND_DB
 objstoretest_SOURCES +=		DBTests.cpp \
-				DBObjectTests.cpp
+				DBObjectTests.cpp \
+				DBTokenTests.cpp
 endif
 
 objstoretest_LDADD =		../../libsofthsm_convarch.la 
