--- a/src/lib/object_store/test/Makefile.am
+++ b/src/lib/object_store/test/Makefile.am
@@ -25,7 +25,8 @@ objstoretest_SOURCES =		objstoretest.cpp \
 if BUILD_OBJECTSTORE_BACKEND_DB
 objstoretest_SOURCES +=		DBTests.cpp \
 				DBObjectTests.cpp \
-				DBTokenTests.cpp
+				DBTokenTests.cpp \
+				DBObjectStoreTests.cpp
 endif
 
 objstoretest_LDADD =		../../libsofthsm_convarch.la 
