SOFTHSM-64: Fix path to file

--- a/win32+openssl/softhsm2/softhsm2.vcxproj.filters
+++ b/win32+openssl/softhsm2/softhsm2.vcxproj.filters
@@ -50,7 +50,7 @@
     <ClCompile Include="..\..\src\lib\SoftHSM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\lib\win32\dllmain.cc">
+    <ClCompile Include="..\..\src\lib\win32\dllmain.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
