SOFTHSM-85: Rename libsofthsm.so to libsofthsm2.so and prefix the command line utilties with softhsm2-.

--- a/src/bin/dump/Makefile.am
+++ b/src/bin/dump/Makefile.am
@@ -5,18 +5,18 @@ AM_CPPFLAGS = 		-I$(srcdir)/../../lib/cryptoki_compat \
 			-I$(srcdir)/../../lib \
 			@SQLITE3_INCLUDES@
 
-dist_man_MANS =		softhsm-dump-file.1 softhsm-dump-db.1
+dist_man_MANS =		softhsm2-dump-file.1 softhsm2-dump-db.1
 
-bin_PROGRAMS =		softhsm-dump-file
+bin_PROGRAMS =		softhsm2-dump-file
 
 if BUILD_OBJECTSTORE_BACKEND_DB
-bin_PROGRAMS +=		softhsm-dump-db
+bin_PROGRAMS +=		softhsm2-dump-db
 endif
 
-softhsm_dump_file_SOURCES =	softhsm-dump-file.cpp
+softhsm2_dump_file_SOURCES =	softhsm2-dump-file.cpp
 
-softhsm_dump_db_SOURCES = softhsm-dump-db.cpp
+softhsm2_dump_db_SOURCES = softhsm2-dump-db.cpp
 
-softhsm_dump_db_LDADD	= @SQLITE3_LIBS@ @YIELD_LIB@
+softhsm2_dump_db_LDADD	= @SQLITE3_LIBS@ @YIELD_LIB@
 
 EXTRA_DIST =		$(srcdir)/*.h
