--- a/configure.ac
+++ b/configure.ac
@@ -78,7 +78,7 @@ AC_ARG_WITH(migrate,
 	[build_migrate="${withval}"],
 	[build_migrate="no"]
 )
-AC_MSG_CHECKING(if building with softhsm-migrate)
+AC_MSG_CHECKING(if building with softhsm2-migrate)
 if test "x${build_migrate}" = "xyes"; then
 	AC_MSG_RESULT(yes)
 	ACX_YIELD
@@ -174,7 +174,7 @@ AC_DEFINE_UNQUOTED(
 )
 AC_DEFINE_UNQUOTED(
 	[DEFAULT_PKCS11_LIB],
-	["$full_libdir/libsofthsm.so"],
+	["$full_libdir/libsofthsm2.so"],
 	[The default PKCS#11 library]
 )
 
