--- a/src/bin/util/Makefile.am
+++ b/src/bin/util/Makefile.am
@@ -4,23 +4,23 @@ AM_CPPFLAGS = 		-I$(srcdir)/../../lib/cryptoki_compat \
 			-I$(srcdir)/../common \
 			@CRYPTO_INCLUDES@
 
-dist_man_MANS =		softhsm-util.1
+dist_man_MANS =		softhsm2-util.1
 
-bin_PROGRAMS =		softhsm-util
+bin_PROGRAMS =		softhsm2-util
 
-softhsm_util_SOURCES =	softhsm-util.cpp \
+softhsm2_util_SOURCES =	softhsm2-util.cpp \
 			../common/getpw.cpp \
 			../common/library.cpp
-softhsm_util_LDADD =	@CRYPTO_LIBS@
+softhsm2_util_LDADD =	@CRYPTO_LIBS@
 
 # Compile with support of OpenSSL
 if WITH_OPENSSL
-softhsm_util_SOURCES +=	softhsm-util-ossl.cpp
+softhsm2_util_SOURCES +=	softhsm2-util-ossl.cpp
 endif
 
 # Compile with support of Botan
 if WITH_BOTAN
-softhsm_util_SOURCES +=	softhsm-util-botan.cpp
+softhsm2_util_SOURCES +=	softhsm2-util-botan.cpp
 endif
 
 EXTRA_DIST =		$(srcdir)/*.h \
